--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-7571d3bf elementor-widget elementor-widget-heading" data-id="7571d3bf" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Welcome to <br>   ADHD Online</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">Welcome to <br>   Autism Online</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-7d414054 elementor-widget elementor-widget-heading" data-id="7d414054" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
