--- a/autism.html
+++ b/autism.html
@@ -576,7 +576,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 				<div class="elementor-element elementor-element-b156eec elementor-widget elementor-widget-text-editor" data-id="b156eec" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
-				<p>Our streamlined process for ADHD assessment and treatment makes getting continuous care accessible and faster for everyone.  </p>					</div>
+				<p>Psychological evaluations completed using HIPAA-compliant videoconferencing technology.</p>					</div>
 						</div>
 				</div>
 						</div>
@@ -705,7 +705,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 						<div class="elementor-element elementor-element-ffaf422 elementor-widget elementor-widget-text-editor" data-id="ffaf422" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
-				<p>Start today by taking the assessment and begin your journey to living a better life. <br /><b>No subscription needed.</b></p>					</div>
+				<p>If you are considering completing an Autism assessment, please take the screener that applies to you: <br /><b>No subscription needed.</b></p>					</div>
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-b0c66d9 elementor-align-center elementor-widget elementor-widget-button" data-id="b0c66d9" data-element_type="widget" data-widget_type="button.default">
