--- a/autism.html
+++ b/autism.html
@@ -530,7 +530,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 				</div>
 				<div class="elementor-element elementor-element-7d414054 elementor-widget elementor-widget-heading" data-id="7d414054" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">The traditional, in-person process from diagnosis to treatment can take weeks, if not months. We wanted to create something better.</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">The traditional, in-person <br> process from diagnosis to treatment can take weeks, if not months. We wanted to create something better.</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-b8b272e elementor-widget elementor-widget-heading" data-id="b8b272e" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
