--- a/autism.html
+++ b/autism.html
@@ -705,7 +705,15 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 						<div class="elementor-element elementor-element-ffaf422 elementor-widget elementor-widget-text-editor" data-id="ffaf422" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
-				<p>If you are considering completing an Autism assessment, please take the screener that applies to you: <br /><b>No subscription needed.</b></p>					</div>
+				<p>If you are considering completing an Autism assessment, please take the screener that applies to you: <br />
+Parent rating - Children 5 and younger <a href="https://patients.adhdonline.com/signup" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<span class="elementor-button-content-wrapper">
+			<span class="elementor-button-text">START TODAY</span>
+</span> <br />
+Parent rating - Children 6 through 12
+Parent rating - Adolescents 13-18
+Guardian rating - Adults 18+
+Self rating - Adults 18+ <br /><b>No subscription needed.</b></p>					</div>
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-b0c66d9 elementor-align-center elementor-widget elementor-widget-button" data-id="b0c66d9" data-element_type="widget" data-widget_type="button.default">
