--- a/autism.html
+++ b/autism.html
@@ -706,10 +706,8 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
 				<p>If you are considering completing an Autism assessment, please take the screener that applies to you: <br />
-Parent rating - Children 5 and younger <a href="https://patients.adhdonline.com/signup" class="elementor-button-link elementor-button elementor-size-md" role="button">
-			<span class="elementor-button-content-wrapper">
-			<span class="elementor-button-text">START TODAY</span>
-</span> <br />
+Parent rating - Children 5 and younger
+			<span class="elementor-button-text">START TODAY</span> <br />
 Parent rating - Children 6 through 12
 Parent rating - Adolescents 13-18
 Guardian rating - Adults 18+
