--- a/autism.html
+++ b/autism.html
@@ -706,12 +706,11 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
 				<p>If you are considering completing an Autism assessment, please take the screener that applies to you: <br />
-Parent rating - Children 5 and younger
-			<span class="elementor-button-text">START TODAY</span> <br />
-Parent rating - Children 6 through 12
-Parent rating - Adolescents 13-18
-Guardian rating - Adults 18+
-Self rating - Adults 18+ <br /><b>No subscription needed.</b></p>					</div>
+<input type="radio"> Parent rating - Children 5 and younger <br />
+<input type="radio"> Parent rating - Children 6 through 12 <br />
+<input type="radio"> Parent rating - Adolescents 13-18 <br />
+<input type="radio"> Guardian rating - Adults 18+ <br />
+<input type="radio"> Self rating - Adults 18+ <br />
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-b0c66d9 elementor-align-center elementor-widget elementor-widget-button" data-id="b0c66d9" data-element_type="widget" data-widget_type="button.default">
