--- a/autism.html
+++ b/autism.html
@@ -710,7 +710,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 <input type="radio"> Parent rating - Adolescents 13-18 <br />
 <input type="radio"> Guardian rating - Adults 18+ <br />
 <input type="radio"> Self rating - Adults 18+ <br />
-					
+
 				<div class="elementor-element elementor-element-b0c66d9 elementor-align-center elementor-widget elementor-widget-button" data-id="b0c66d9" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
@@ -1039,7 +1039,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 				<div class="elementor-element elementor-element-3437735 elementor-widget elementor-widget-text-editor" data-id="3437735" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
-				<p>We are a team of doctors and psychologists who believe that a certified ADHD diagnosis and treatment should not be complicated or out of reach. We created ADHD Online to streamline the process of diagnosis and treatment. Our network of licensed psychologists can provide a certified diagnosis and our network of physicians stand by to provide treatment plans and medication management.</p><p>In short, our mission is to be here for you every step of the way.</p>					</div>
+				<p>We are a team of doctors and psychologists who believe that a certified Autism diagnosis and treatment should not be complicated or out of reach. We created Autism Online to streamline the process of diagnosis and treatment. Our network of licensed psychologists can provide a certified diagnosis and our network of physicians stand by to provide treatment plans and medication management.</p><p>In short, our mission is to be here for you every step of the way.</p>					</div>
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-1096bb5 elementor-align-left elementor-widget elementor-widget-button" data-id="1096bb5" data-element_type="widget" data-widget_type="button.default">
@@ -1122,7 +1122,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 														</span>
 												<a class="elementor-accordion-title" href="">Q: How much does it cost?</a>
 					</div>
-					<div id="elementor-tab-content-7952" class="elementor-tab-content elementor-clearfix" data-tab="2" role="tabpanel" aria-labelledby="elementor-tab-title-7952"><p><span style="font-weight: 400;">A: The max out-of-pocket you will spend on our ADHD assessment is $149.</span></p></div>
+					<div id="elementor-tab-content-7952" class="elementor-tab-content elementor-clearfix" data-tab="2" role="tabpanel" aria-labelledby="elementor-tab-title-7952"><p><span style="font-weight: 400;">A: The max out-of-pocket you will spend on our Austism assessment is $1,499.</span></p></div>
 				</div>
 							<div class="elementor-accordion-item">
 					<div id="elementor-tab-title-7953" class="elementor-tab-title" data-tab="3" role="tab" aria-controls="elementor-tab-content-7953" aria-expanded="false">
@@ -1132,7 +1132,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 														</span>
 												<a class="elementor-accordion-title" href="">Q: How does the assessment work?</a>
 					</div>
-					<div id="elementor-tab-content-7953" class="elementor-tab-content elementor-clearfix" data-tab="3" role="tabpanel" aria-labelledby="elementor-tab-title-7953"><p><span style="font-weight: 400;">A: Our proprietary, dynamic, and logic-based assessment alters questions as you go based on the answers you provide to ensure our network of psychologists have all the information they need to make or exclude an ADHD diagnosis.</span></p></div>
+					<div id="elementor-tab-content-7953" class="elementor-tab-content elementor-clearfix" data-tab="3" role="tabpanel" aria-labelledby="elementor-tab-title-7953"><p><span style="font-weight: 400;">A: Our proprietary, dynamic, and logic-based assessment alters questions as you go based on the answers you provide to ensure our network of psychologists have all the information they need to make or exclude an Autism diagnosis.</span></p></div>
 				</div>
 							<div class="elementor-accordion-item">
 					<div id="elementor-tab-title-7954" class="elementor-tab-title" data-tab="4" role="tab" aria-controls="elementor-tab-content-7954" aria-expanded="false">
@@ -1155,17 +1155,6 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 					<div id="elementor-tab-content-7955" class="elementor-tab-content elementor-clearfix" data-tab="5" role="tabpanel" aria-labelledby="elementor-tab-title-7955"><p><span style="font-weight: 400;">A: We are 100% safe and confidential with your information, using bank-level encryption. We are fully HIPPA compliant.</span></p><p><span style="font-weight: 400;">We never share your information with any third party unless you specifically request we do so in writing. The information you share is protected by the same doctor-patient privilege you would expect in an office visit.</span></p></div>
 				</div>
 								</div>
-				</div>
-				</div>
-				<div class="elementor-element elementor-element-5772dcd elementor-align-center elementor-widget elementor-widget-button" data-id="5772dcd" data-element_type="widget" data-widget_type="button.default">
-				<div class="elementor-widget-container">
-					<div class="elementor-button-wrapper">
-			<a href="https://adhddiagnosis.zendesk.com/hc/en-us" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
-						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">View all FAQs</span>
-		</span>
-					</a>
-		</div>
 				</div>
 				</div>
 						</div>
