--- a/ptsd.html
+++ b/ptsd.html
@@ -42,7 +42,7 @@
 </script>
 <!-- GTM4WP: End of Google Optimize Page Hiding snippet -->
 <!-- Search Engine Optimization by Rank Math PRO - https://s.rankmath.com/home -->
-<title>Autism Online Diagnosis &amp; Treatment - No Subscription Required</title>
+<title>PTSD Online Diagnosis &amp; Treatment - No Subscription Required</title>
 <meta name="description" content="The traditional, in-person process from diagnosis to treatment can take weeks, if not months. We wanted to create something better."/>
 <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
 <link rel="canonical" href="https://adhdonline.com/" />
@@ -355,7 +355,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 		data-item-id="logo">
 
 <div class="site-logo">
-	<span class="brand" title="ADHD Online" aria-label="ADHD Online"><img width="934" height="187" src="https://stevegoulet.github.io/images/autism.png" class="neve-site-logo skip-lazy" alt="" loading="lazy" data-variant="logo" srcset="https://stevegoulet.github.io/images/autism.png 934w, https://stevegoulet.github.io/images/autism.png 300w, https://stevegoulet.github.io/images/autism.png 768w, https://stevegoulet.github.io/images/autism.png 930w" sizes="(max-width: 934px) 100vw, 934px" /></span></div>
+	<span class="brand" title="ADHD Online" aria-label="ADHD Online"><img width="934" height="187" src="https://stevegoulet.github.io/images/PTSD.png" class="neve-site-logo skip-lazy" alt="" loading="lazy" data-variant="logo" srcset="https://stevegoulet.github.io/images/PTSD.png 934w, https://stevegoulet.github.io/images/PTSD.png 300w, https://stevegoulet.github.io/images/PTSD.png 768w, https://stevegoulet.github.io/images/PTSD.png 930w" sizes="(max-width: 934px) 100vw, 934px" /></span></div>
 
 	</div>
 
@@ -413,7 +413,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 		data-item-id="logo">
 
 <div class="site-logo">
-	<span class="brand" title="ADHD Online" aria-label="ADHD Online"><img width="934" height="187" src="https://stevegoulet.github.io/images/autism.png" class="neve-site-logo skip-lazy" alt="" loading="lazy" data-variant="logo" srcset="https://stevegoulet.github.io/images/autism.png 934w, https://stevegoulet.github.io/images/autism.png 300w, https://stevegoulet.github.io/images/autism.png 768w, https://stevegoulet.github.io/images/autism.png 930w" sizes="(max-width: 934px) 100vw, 934px" /></span></div>
+	<span class="brand" title="ADHD Online" aria-label="ADHD Online"><img width="934" height="187" src="https://stevegoulet.github.io/images/PTSD.png" class="neve-site-logo skip-lazy" alt="" loading="lazy" data-variant="logo" srcset="https://stevegoulet.github.io/images/PTSD.png 934w, https://stevegoulet.github.io/images/PTSD.png 300w, https://stevegoulet.github.io/images/PTSD.png 768w, https://stevegoulet.github.io/images/PTSD.png 930w" sizes="(max-width: 934px) 100vw, 934px" /></span></div>
 
 	</div>
 
@@ -526,7 +526,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-7571d3bf elementor-widget elementor-widget-heading" data-id="7571d3bf" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Welcome to <br>   Autism Online</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">Welcome to <br>   PTSD Online</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-7d414054 elementor-widget elementor-widget-heading" data-id="7d414054" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
@@ -704,7 +704,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-ffaf422 elementor-widget elementor-widget-text-editor" data-id="ffaf422" data-element_type="widget" data-widget_type="text-editor.default">
 
-				<p>If you are considering completing an Autism assessment, please take the screener that applies to you: <br />
+				<p>If you are considering completing an PTSD assessment, please take the screener that applies to you: <br />
 <input type="radio"> Parent rating - Children 5 and younger <br />
 <input type="radio"> Parent rating - Children 6 through 12 <br />
 <input type="radio"> Parent rating - Adolescents 13-18 <br />
@@ -1039,7 +1039,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 				<div class="elementor-element elementor-element-3437735 elementor-widget elementor-widget-text-editor" data-id="3437735" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 								<div class="elementor-text-editor elementor-clearfix">
-				<p>We are a team of doctors and psychologists who believe that a certified Autism diagnosis and treatment should not be complicated or out of reach. We created Autism Online to streamline the process of diagnosis and treatment. Our network of licensed psychologists can provide a certified diagnosis and our network of physicians stand by to provide treatment plans and medication management.</p><p>In short, our mission is to be here for you every step of the way.</p>					</div>
+				<p>We are a team of doctors and psychologists who believe that a certified PTSD diagnosis and treatment should not be complicated or out of reach. We created PTSD Online to streamline the process of diagnosis and treatment. Our network of licensed psychologists can provide a certified diagnosis and our network of physicians stand by to provide treatment plans and medication management.</p><p>In short, our mission is to be here for you every step of the way.</p>					</div>
 						</div>
 				</div>
 				<div class="elementor-element elementor-element-1096bb5 elementor-align-left elementor-widget elementor-widget-button" data-id="1096bb5" data-element_type="widget" data-widget_type="button.default">
@@ -1132,7 +1132,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 														</span>
 												<a class="elementor-accordion-title" href="">Q: How does the assessment work?</a>
 					</div>
-					<div id="elementor-tab-content-7953" class="elementor-tab-content elementor-clearfix" data-tab="3" role="tabpanel" aria-labelledby="elementor-tab-title-7953"><p><span style="font-weight: 400;">A: Our proprietary, dynamic, and logic-based assessment alters questions as you go based on the answers you provide to ensure our network of psychologists have all the information they need to make or exclude an Autism diagnosis.</span></p></div>
+					<div id="elementor-tab-content-7953" class="elementor-tab-content elementor-clearfix" data-tab="3" role="tabpanel" aria-labelledby="elementor-tab-title-7953"><p><span style="font-weight: 400;">A: Our proprietary, dynamic, and logic-based assessment alters questions as you go based on the answers you provide to ensure our network of psychologists have all the information they need to make or exclude an PTSD diagnosis.</span></p></div>
 				</div>
 							<div class="elementor-accordion-item">
 					<div id="elementor-tab-title-7954" class="elementor-tab-title" data-tab="4" role="tab" aria-controls="elementor-tab-content-7954" aria-expanded="false">
@@ -1537,7 +1537,7 @@ var NeveProperties = {"ajaxurl":"https:\/\/adhdonline.com\/wp-admin\/admin-ajax.
 <script type='text/javascript' id='neve-script-js-after'>
 	var html = document.documentElement;
 	var theme = html.getAttribute('data-neve-theme') || 'light';
-	var variants = {"logo":{"light":{"src":"https:\/\/stevegoulet.github.io\/images\/autism.png","srcset":"https:\/\/stevegoulet.github.io\/images\/autism.png 934w, https:\/\/stevegoulet.github.io\/images\/autism.png 300w, https:\/\/stevegoulet.github.io\/images\/autism.png 768w, https:\/\/stevegoulet.github.io\/images\/autism.png 930w","sizes":"(max-width: 934px) 100vw, 934px"},"dark":{"src":"https:\/\/stevegoulet.github.io\/images\/autism.png","srcset":"https:\/\/stevegoulet.github.io\/images\/autism.png 934w, https:\/\/stevegoulet.github.io\/images\/autism.png 300w, https:\/\/stevegoulet.github.io\/images\/autism.png 768w, https:\/\/stevegoulet.github.io\/images\/autism.png 930w","sizes":"(max-width: 934px) 100vw, 934px"},"same":true},"logo_2":{"light":{"src":"https:\/\/stevegoulet.github.io\/images\/autism.png","srcset":false,"sizes":"(max-width: 300px) 100vw, 300px"},"dark":{"src":"https:\/\/stevegoulet.github.io\/images\/autism.png","srcset":false,"sizes":"(max-width: 300px) 100vw, 300px"},"same":true}};
+	var variants = {"logo":{"light":{"src":"https:\/\/stevegoulet.github.io\/images\/PTSD.png","srcset":"https:\/\/stevegoulet.github.io\/images\/PTSD.png 934w, https:\/\/stevegoulet.github.io\/images\/PTSD.png 300w, https:\/\/stevegoulet.github.io\/images\/PTSD.png 768w, https:\/\/stevegoulet.github.io\/images\/PTSD.png 930w","sizes":"(max-width: 934px) 100vw, 934px"},"dark":{"src":"https:\/\/stevegoulet.github.io\/images\/PTSD.png","srcset":"https:\/\/stevegoulet.github.io\/images\/PTSD.png 934w, https:\/\/stevegoulet.github.io\/images\/PTSD.png 300w, https:\/\/stevegoulet.github.io\/images\/PTSD.png 768w, https:\/\/stevegoulet.github.io\/images\/PTSD.png 930w","sizes":"(max-width: 934px) 100vw, 934px"},"same":true},"logo_2":{"light":{"src":"https:\/\/stevegoulet.github.io\/images\/PTSD.png","srcset":false,"sizes":"(max-width: 300px) 100vw, 300px"},"dark":{"src":"https:\/\/stevegoulet.github.io\/images\/PTSD.png","srcset":false,"sizes":"(max-width: 300px) 100vw, 300px"},"same":true}};
 
 	function setCurrentTheme( theme ) {
 		var pictures = document.getElementsByClassName( 'neve-site-logo' );
