--- a/ptsd.html
+++ b/ptsd.html
@@ -355,7 +355,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 		data-item-id="logo">
 
 <div class="site-logo">
-	<span class="brand" title="ADHD Online" aria-label="ADHD Online"><img width="934" height="187" src="https://stevegoulet.github.io/images/PTSD.png" class="neve-site-logo skip-lazy" alt="" loading="lazy" data-variant="logo" srcset="https://stevegoulet.github.io/images/PTSD.png 934w, https://stevegoulet.github.io/images/PTSD.png 300w, https://stevegoulet.github.io/images/PTSD.png 768w, https://stevegoulet.github.io/images/PTSD.png 930w" sizes="(max-width: 934px) 100vw, 934px" /></span></div>
+	<span class="brand" title="ADHD Online" aria-label="ADHD Online"><img width="934" height="187" src="https://stevegoulet.github.io/images/ptsd.png" class="neve-site-logo skip-lazy" alt="" loading="lazy" data-variant="logo" srcset="https://stevegoulet.github.io/images/ptsd.png 934w, https://stevegoulet.github.io/images/ptsd.png 300w, https://stevegoulet.github.io/images/ptsd.png 768w, https://stevegoulet.github.io/images/ptsd.png 930w" sizes="(max-width: 934px) 100vw, 934px" /></span></div>
 
 	</div>
 
@@ -413,7 +413,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 		data-item-id="logo">
 
 <div class="site-logo">
-	<span class="brand" title="ADHD Online" aria-label="ADHD Online"><img width="934" height="187" src="https://stevegoulet.github.io/images/PTSD.png" class="neve-site-logo skip-lazy" alt="" loading="lazy" data-variant="logo" srcset="https://stevegoulet.github.io/images/PTSD.png 934w, https://stevegoulet.github.io/images/PTSD.png 300w, https://stevegoulet.github.io/images/PTSD.png 768w, https://stevegoulet.github.io/images/PTSD.png 930w" sizes="(max-width: 934px) 100vw, 934px" /></span></div>
+	<span class="brand" title="ADHD Online" aria-label="ADHD Online"><img width="934" height="187" src="https://stevegoulet.github.io/images/ptsd.png" class="neve-site-logo skip-lazy" alt="" loading="lazy" data-variant="logo" srcset="https://stevegoulet.github.io/images/ptsd.png 934w, https://stevegoulet.github.io/images/ptsd.png 300w, https://stevegoulet.github.io/images/ptsd.png 768w, https://stevegoulet.github.io/images/ptsd.png 930w" sizes="(max-width: 934px) 100vw, 934px" /></span></div>
 
 	</div>
 
