--- a/ptsd.html
+++ b/ptsd.html
@@ -340,7 +340,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 	</div>
 </div>
 
- 
+
 <nav class="header--row header-main hide-on-mobile hide-on-tablet layout-full-contained nv-navbar header--row"
 	data-row-id="main" data-show-on="desktop">
 
@@ -1537,7 +1537,7 @@ var NeveProperties = {"ajaxurl":"https:\/\/adhdonline.com\/wp-admin\/admin-ajax.
 <script type='text/javascript' id='neve-script-js-after'>
 	var html = document.documentElement;
 	var theme = html.getAttribute('data-neve-theme') || 'light';
-	var variants = {"logo":{"light":{"src":"https:\/\/stevegoulet.github.io\/images\/PTSD.png","srcset":"https:\/\/stevegoulet.github.io\/images\/PTSD.png 934w, https:\/\/stevegoulet.github.io\/images\/PTSD.png 300w, https:\/\/stevegoulet.github.io\/images\/PTSD.png 768w, https:\/\/stevegoulet.github.io\/images\/PTSD.png 930w","sizes":"(max-width: 934px) 100vw, 934px"},"dark":{"src":"https:\/\/stevegoulet.github.io\/images\/PTSD.png","srcset":"https:\/\/stevegoulet.github.io\/images\/PTSD.png 934w, https:\/\/stevegoulet.github.io\/images\/PTSD.png 300w, https:\/\/stevegoulet.github.io\/images\/PTSD.png 768w, https:\/\/stevegoulet.github.io\/images\/PTSD.png 930w","sizes":"(max-width: 934px) 100vw, 934px"},"same":true},"logo_2":{"light":{"src":"https:\/\/stevegoulet.github.io\/images\/PTSD.png","srcset":false,"sizes":"(max-width: 300px) 100vw, 300px"},"dark":{"src":"https:\/\/stevegoulet.github.io\/images\/PTSD.png","srcset":false,"sizes":"(max-width: 300px) 100vw, 300px"},"same":true}};
+	var variants = {"logo":{"light":{"src":"https:\/\/stevegoulet.github.io\/images\/ptsd.png","srcset":"https:\/\/stevegoulet.github.io\/images\/ptsd.png 934w, https:\/\/stevegoulet.github.io\/images\/ptsd.png 300w, https:\/\/stevegoulet.github.io\/images\/ptsd.png 768w, https:\/\/stevegoulet.github.io\/images\/ptsd.png 930w","sizes":"(max-width: 934px) 100vw, 934px"},"dark":{"src":"https:\/\/stevegoulet.github.io\/images\/ptsd.png","srcset":"https:\/\/stevegoulet.github.io\/images\/ptsd.png 934w, https:\/\/stevegoulet.github.io\/images\/ptsd.png 300w, https:\/\/stevegoulet.github.io\/images\/ptsd.png 768w, https:\/\/stevegoulet.github.io\/images\/ptsd.png 930w","sizes":"(max-width: 934px) 100vw, 934px"},"same":true},"logo_2":{"light":{"src":"https:\/\/stevegoulet.github.io\/images\/ptsd.png","srcset":false,"sizes":"(max-width: 300px) 100vw, 300px"},"dark":{"src":"https:\/\/stevegoulet.github.io\/images\/ptsd.png","srcset":false,"sizes":"(max-width: 300px) 100vw, 300px"},"same":true}};
 
 	function setCurrentTheme( theme ) {
 		var pictures = document.getElementsByClassName( 'neve-site-logo' );
