--- a/addiction.html
+++ b/addiction.html
@@ -48,7 +48,7 @@
 <link rel="canonical" href="https://adhdonline.com/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Austism Online Diagnosis &amp; Treatment - No Subscription Required" />
+<meta property="og:title" content="Addiction Online Diagnosis &amp; Treatment - No Subscription Required" />
 <meta property="og:description" content="The traditional, in-person process from diagnosis to treatment can take weeks, if not months. We wanted to create something better." />
 <meta property="og:url" content="https://adhdonline.com/" />
 <meta property="og:site_name" content="ADHD Online" />
@@ -356,7 +356,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 
 <div class="site-logo">
 	<span class="brand" title="ADHD Online" aria-label="ADHD Online"><img width="934" height="187" src="https://stevegoulet.github.io/images/addiction.png" class="neve-site-logo skip-lazy" alt="" loading="lazy" data-variant="logo" srcset=" 934w, https://stevegoulet.github.io/images/addiction.png 300w, https://stevegoulet.github.io/images/addiction.png 768w, https://stevegoulet.github.io/images/addiction.png 930w" sizes="(max-width: 934px) 100vw, 934px" /></span></div>
- 
+
 	</div>
 
 </div><div class="builder-item has-nav hfg-item-last col-7 desktop-right offset-2 hfg-is-group"><div class="item--inner builder-item--primary-menu has_menu"
