--- a/ptsd.html
+++ b/ptsd.html
@@ -704,13 +704,7 @@ height="0" width="0" style="display:none;visibility:hidden" aria-hidden="true"><
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-ffaf422 elementor-widget elementor-widget-text-editor" data-id="ffaf422" data-element_type="widget" data-widget_type="text-editor.default">
 
-				<p>If you are considering completing an PTSD assessment, please take the screener that applies to you: <br />
-<input type="radio"> Parent rating - Children 5 and younger <br />
-<input type="radio"> Parent rating - Children 6 through 12 <br />
-<input type="radio"> Parent rating - Adolescents 13-18 <br />
-<input type="radio"> Guardian rating - Adults 18+ <br />
-<input type="radio"> Self rating - Adults 18+ <br />
-
+				<p>Start today by taking the assessment and begin your journey to living a better life <br />
 				<div class="elementor-element elementor-element-b0c66d9 elementor-align-center elementor-widget elementor-widget-button" data-id="b0c66d9" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
