--- a/assessment.html
+++ b/assessment.html
@@ -7,7 +7,7 @@
   <h1>Questionnaire</h1>
   <div id="questionContainer">
     <p id="question"></p>
-    <select id="answer"></select>
+    <select id="answer" multiple></select>
     <button onclick="nextQuestion()">Next</button>
   </div>
 
