--- a/assessment.html
+++ b/assessment.html
@@ -21,6 +21,16 @@
     <script>
       var questions = [
     {
+      "fieldName": "patientAge",
+      "id": "demographics-4",
+      "properties": {
+        "allowOther": false,
+        "options": Array.from({length: 120}, (_, i) => ({ label: `${i+1}`, value: `${i+1}`}))
+      },
+      "question": "What is your age?",
+      "type": "singleSelect"
+    },
+     {
       "fieldName": "patientRace",
       "helperText": "This question is optional",
       "id": "demographics-2",
