--- a/assessment.html
+++ b/assessment.html
@@ -141,22 +141,27 @@
       }
 
       function nextQuestion() {
-        var answerElement = document.getElementById("answer");
-        var selectedOptions = Array.from(answerElement.options)
-          .filter(option => option.selected)
-          .map(option => option.value);
+      var answerElement = document.getElementById("answer");
+      var selectedOptions = Array.from(answerElement.options)
+      .filter(option => option.selected)
+      .map(option => option.value);
 
-        selectedAnswers.push(selectedOptions);
+      selectedAnswers.push(selectedOptions);
 
+      currentIndex++;
+
+      // Skip the second question if the age is under 18
+      if (currentIndex === 1 && selectedAnswers[0] < 18) {
+        selectedAnswers.push("Skipped");
         currentIndex++;
-
-        if (currentIndex >= questions.length) {
-          displayResults();
-        } else {
-          displayQuestion();
-        }
       }
-
+      
+      if (currentIndex >= questions.length) {
+        displayResults();
+      } else {
+        displayQuestion();
+      }
+        
       function displayResults() {
         var resultsElement = document.getElementById("results");
         var surveyContainer = document.getElementById("surveyContainer");
