--- a/langflow.html
+++ b/langflow.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Langflow POC</title>
+    <style>
+        .cl-header-subtitle {
+            display: none;
+        }
+    </style>
 </head>
 <body>
 <script
