--- a/langflow.html
+++ b/langflow.html
@@ -5,7 +5,7 @@
     <title>Langflow POC</title>
     <style>
         .cl-header-subtitle {
-            display: none;
+            display: none !important;
         }
     </style>
 </head>
