--- a/langflow.html
+++ b/langflow.html
@@ -30,5 +30,15 @@
     height="400"
     width="400"
 </langflow-chat>
+
+<script>
+    // Find the element by its class name
+    const headerSubtitle = document.querySelector('.cl-header-subtitle');
+
+    // If the element is found, change its display style
+    if (headerSubtitle) {
+      headerSubtitle.style.display = 'none';
+    }
+  </script>
 </body>
 </html>
