--- a/langflow.html
+++ b/langflow.html
@@ -17,7 +17,8 @@
     window_title="Zendesk POC TESTING ONLY"
     flow_id="84ab45b3-0ea8-4fa2-9aa5-3ccc344ad710"
     host_url="https://langflow.mentavi.com"
-    api_key="sk-c5LYVCQL7MQ9bkqxlx-MsFCZcFUUB8f1BL7Sk8zM7a8">
+    api_key="sk-c5LYVCQL7MQ9bkqxlx-MsFCZcFUUB8f1BL7Sk8zM7a8"
+    online_message="Not for public consumption. Testing ONLY!!"
     chat_window_style='{
         "backgroundColor": "#1a0d0d",
         "border": "4px solid #b30000",
@@ -28,17 +29,7 @@
         "padding": "16px"
         }
     height="400"
-    width="400"
+    width="400">
 </langflow-chat>
-
-<script>
-    // Find the element by its class name
-    const headerSubtitle = document.querySelector('.cl-header-subtitle');
-
-    // If the element is found, change its display style
-    if (headerSubtitle) {
-      headerSubtitle.style.display = 'none';
-    }
-  </script>
 </body>
 </html>
