--- a/langflow.html
+++ b/langflow.html
@@ -13,6 +13,9 @@
 <script
   src="https://cdn.jsdelivr.net/gh/logspace-ai/langflow-embedded-chat@v1.0.7/dist/build/static/js/bundle.min.js">
 </script>
+<script
+  src="https://cdn.jsdelivr.net/gh/logspace-ai/langflow-embedded-chat@v1.0.7/dist/build/static/js/bundle.min.js">
+</script>
   <langflow-chat
     window_title="Zendesk POC TESTING ONLY"
     flow_id="84ab45b3-0ea8-4fa2-9aa5-3ccc344ad710"
