message - patient or visitor

--- a/langflow.html
+++ b/langflow.html
@@ -13,7 +13,7 @@
     flow_id="84ab45b3-0ea8-4fa2-9aa5-3ccc344ad710"
     host_url="https://langflow.mentavi.com"
     api_key="sk-c5LYVCQL7MQ9bkqxlx-MsFCZcFUUB8f1BL7Sk8zM7a8"
-    online_message="Not for public consumption. Testing ONLY!!"
+    online_message="Are you an existing patient or a visitor (required)?"
     chat_window_style='{
         "backgroundColor": "#1a0d0d",
         "border": "4px solid #b30000",
